Youtube video demo added

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Conway's Game of Life:
 - Visual Studio 2012
 - .NET Framework 4.5
 - SignalR
+
+Working demo on Youtube: http://www.youtube.com/watch?v=tpr4k24mGb4
