Youtube demo fix

--- a/README
+++ b/README
@@ -4,4 +4,4 @@ Conway's Game of Life:
 - .NET Framework 4.5
 - SignalR
 
-Working demo on Youtube: http://www.youtube.com/watch?v=tpr4k24mGb4
+Working demo on Youtube: http://www.youtube.com/watch?v=XXIBkh_zly0
